src/test/deca/context/invalid/resultats/test4_op_modulo-ima.res
  IMA -- Fichier ./src/test/deca/context/invalid/test4_op_modulo.ass introuvable
